added tests and an action